--- a/template/homepage.html
+++ b/template/homepage.html
@@ -8,9 +8,8 @@
     <div class="upload-area__header">
       <h1 class="upload-area__title">Upload your file</h1>
       <p class="upload-area__paragraph">
-        File should be 
+        Only PDF files are allowed.
         <strong class="upload-area__tooltip">
-          Like
           <span class="upload-area__tooltip-data"></span> 
         </strong>
       </p>
@@ -47,7 +46,7 @@
       <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <span class="download" href="#" id="downloadButton">Download</span>
-        <h2>Your Result</h2>
+        <h2>Data Output</h2>
         <div id="tableContainer" class="table-container">
         </div>
         <div class="modal-footer">
